tests/errors/sem.invalid-jmp.condition.or
main :: () -> void {
    x := false;
    do:outer {
        if { if x then break:outer; true; } then true;
    };
};
